--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <div class="jumbotron">
   <h1>Welcome to my app!</h1>
-  Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
+  <div class="log-in">
+  <%= link_to "Log in", "#", class: "btn btn-default" %> <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
+  </div>
 </div>
