--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,20 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$font-family-sans-serif:ain'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $body-bg: #ecf0f1;
-$navbar-inverse-bg: #e74c3c;
-$navbar-inverse-link-color: white;
-$jumbotron-bg:#bdc3c7;
+$navbar-default-bg: white;
+$navbar-default-link-color: #333;
+$jumbotron-bg: white;
+$navbar-default-brand-color: #c0392b;
+$brand-primary:#c0392b;
+$navbar-height: 45px;
 @import 'bootstrap';
+
+.jumbotron{
+  text-align: center;
+}
+
+.navbar-brand{
+  font-weight: bold;
+}
+
