--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,12 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-  <%= yield %>
+    <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class:"alert alert-#{name}") %>
+    <% end %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <%= yield %>
   </div>
 </body>
 </html>
