--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,12 @@
   <%= render 'layouts/header' %>
   <div class="container">
     <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class:"alert alert-#{name}") %>
+      <% if alert %>
+        <%= content_tag(:div, msg, class:"alert alert-success") %>
+      <% elsif notice %>
+        <%= content_tag(:div, msg, class:"alert alert-danger") %>
+      <% end %>
     <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <%= yield %>
   </div>
 </body>
