--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
 <div class="jumbotron">
   <h1>Welcome to my app!</h1>
-  <div class="log-in">
-  <%= link_to "Log in", "#", class: "btn btn-default" %> <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
-  </div>
+  <% if user_signed_in? %>
+    <%  %>
+  <% else %>
+    <%= link_to "Log in", new_user_session_path, class: "btn btn-default" %>
+    <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary" %>
+  <% end  %>
 </div>
