--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
       <th colspan="3">User_id</th>
     </tr>
@@ -13,6 +14,7 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.description %></td>
         <td><%= pin.user_id %></td>
         <td><%= pin.user.try(:email) %></td>
@@ -25,8 +27,8 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
+
 <% if user_signed_in? %> 
   <%= link_to 'New Pin', new_pin_path %>
 <% end %>
