--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -11,15 +10,17 @@
         </button>
         <%= link_to "Pinteresting", root_path, class: "navbar-brand" %>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li>
           <% if user_signed_in? %>
-            <li><%= link_to 'New Pin', new_pin_path %></li>
+            <li>
+            <%= link_to new_pin_path do %>
+              <i class="fa fa-plus"></i> New Pin
+            <% end %>
+          </li>
             <li><%= link_to "Account Settings", edit_user_registration_path %></li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li> 
           <% else %>
@@ -27,6 +28,6 @@
           <% end %>
         </ul>
       </div>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
