--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,10 +1,23 @@
-<%= image_tag @pin.image.url(:medium) %>
-
-<p>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-</p>
-  <% if @pin.user == current_user %>
-    <%= link_to 'Edit', edit_pin_path(@pin) %> |
-  <% end %>
 <%= link_to 'Back', pins_path %>
+
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading text-center">
+        <%= image_tag @pin.image.url(:medium) %>
+      </div>
+      <div class="panel-body">
+      <p><strong>Description:</strong><%= @pin.description %></p>
+        <% if @pin.user == current_user %>
+         <%= link_to edit_pin_path(@pin) do %>
+            <i class="fa fa-pencil-square-o"></i>
+            Edit
+          <% end %>
+          <%= link_to @pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="fa fa-trash-o"></i>
+            Delete
+          <% end %>
+        <% end %>
+    </div>
+  </div>
+</div>
