--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,9 @@
         </button>
         <%= link_to "Pinteresting", root_path, class: "navbar-brand" %>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li>
           <% if user_signed_in? %>
